# csc232-hw01-the-big-five-wufiona

./: .gitignore  CMakeLists.txt  README.md
config/: Doxyfile.in
src/: Demo.cpp  Main.cpp  Point.h  TwoDimensionalPoint.cpp  TwoDimensionalPoint.h
test/: BigFiveTest.cpp  BigFiveTest.h  PointTest.cpp  PointTest.h  TwoDimensionalPointTest.cpp  TwoDimensionalPointTest.h
